php file added for contact form activation

--- a/index.html
+++ b/index.html
@@ -80,8 +80,6 @@
                                         </li>
                                         <li><a class="smoth-scroll" href="#skills">skills</a>
                                         </li>
-                                        <li><a class="smoth-scroll" href="#work">Work</a>
-                                        </li>
                                         <li><a class="smoth-scroll" href="https://drive.google.com/open?id=1zw6ahkhjX4QVhbF7UHZt1cON7Vy1v3kd" target="_blank">CV</a>
                                         </li>
                                         <li><a class="smoth-scroll" href="#contact">Contact</a>
@@ -108,7 +106,7 @@
                             <div class="col-md-12">
                                 <div class="header-text text-center">
                                     <h2 class="wow fadeInUp" data-wow-delay="0.8s">Full Stack Web Developer</h2>
-                                    <a class="home-btn smoth-scroll wow fadeInUp" data-wow-delay="1.2s" href="#work">View work</a>
+                                    <!-- <a class="home-btn smoth-scroll wow fadeInUp" data-wow-delay="1.2s" href="#work">View work</a> -->
                                 </div>
                             </div>
                         </div>
@@ -139,8 +137,6 @@
                                 </li>
                                 <li><a href="https://www.linkedin.com/in/md-sunny-369218126" target="_blank"><i class="fa fa-linkedin"></i></a>
                                 </li>
-                                <li><a href="#" target="_blank"><i class="fa fa-dribbble"></i></a>
-                                </li>
                                 <li><a href="https://www.youtube.com/channel/UCd2miKIZ8TbDQ5J4H5nudIQ" target="_blank"><i class="fa fa-youtube"></i></a>
                                 </li>
                         </ul>
@@ -166,7 +162,7 @@
             <div class="row">
                 <div class="col-sm-12 text-center">
                     <div class="section-title">
-                        <h2>Programming Skills</h2>
+                        <h2>Development Skills</h2>
                     </div>
                 </div>
             </div>
@@ -298,7 +294,7 @@
     <!-- / END SKILL DESIN AREA -->
 
 
-    <!-- START WORK DESIGN AREA -->
+    <!--  START WORK DESIGN AREA 
     <section id="work" class="work section-padding">
         <div class="container">
             <div class="row">
@@ -317,7 +313,7 @@
             </div>
             <div class="work-inner">
                 <div class="row work-posts">
-                    <!-- START SINGLE WORK DESIGN AREA -->
+                     START SINGLE WORK DESIGN AREA 
                     <div class="col-md-4 col-sm-4 mix webdesign">
                         <div class="item wow fadeInUp" data-wow-delay="0.2s">
                             <a href="assets/images/portfolio/1.jpg" class="work-popup">
@@ -331,7 +327,7 @@
                         </div>
                     </div>
                     <!-- END SINGLE WORK DESIGN AREA -->
-                    <!-- START SINGLE WORK DESIGN AREA -->
+                    <!-- START SINGLE WORK DESIGN AREA 
                     <div class="col-md-4 col-sm-4 mix development">
                         <div class="item wow fadeInUp" data-wow-delay="0.4s">
                             <a href="assets/images/portfolio/2.jpg" class="work-popup">
@@ -345,7 +341,7 @@
                         </div>
                     </div>
                     <!-- END SINGLE WORK DESIGN AREA -->
-                    <!-- START SINGLE WORK DESIGN AREA -->
+                    <!-- START SINGLE WORK DESIGN AREA 
                     <div class="col-md-4 col-sm-4 mix web">
                         <div class="item wow fadeInUp" data-wow-delay="0.6s">
                             <a href="assets/images/portfolio/3.jpg" class="work-popup">
@@ -359,7 +355,7 @@
                         </div>
                     </div>
                     <!-- END SINGLE WORK DESIGN AREA -->
-                    <!-- START SINGLE WORK DESIGN AREA -->
+                    <!-- START SINGLE WORK DESIGN AREA 
                     <div class="col-md-4 col-sm-4 mix development photography">
                         <div class="item wow fadeInUp" data-wow-delay="0.8s">
                             <a href="assets/images/portfolio/4.jpg" class="work-popup">
@@ -373,7 +369,7 @@
                         </div>
                     </div>
                     <!-- END SINGLE WORK DESIGN AREA -->
-                    <!-- START SINGLE WORK DESIGN AREA -->
+                    <!-- START SINGLE WORK DESIGN AREA -
                     <div class="col-md-4 col-sm-4 mix typography web">
                         <div class="item wow fadeInUp" data-wow-delay="1s">
                             <a href="assets/images/portfolio/5.jpg" class="work-popup">
@@ -387,7 +383,7 @@
                         </div>
                     </div>
                     <!-- END SINGLE WORK DESIGN AREA -->
-                    <!-- START SINGLE WORK DESIGN AREA -->
+                    <!-- START SINGLE WORK DESIGN AREA --
                     <div class="col-md-4 col-sm-4 mix webdesign development photography">
                         <div class="item wow fadeInUp" data-wow-delay="1.2s">
                             <a href="assets/images/portfolio/6.jpg" class="work-popup">
@@ -405,7 +401,7 @@
             </div>
         </div>
     </section>
-    <!-- / END START WORK DESIGN AREA -->
+    <!-- / END START WORK DESIGN AREA --> -->
 
 
     <!-- START CONTACT DESIGN AREA -->
@@ -423,7 +419,7 @@
 				<div class="col-md-12">
                     <!-- START CONTACT FORM DESIGN AREA -->
                     <div class="contact-form">
-                        <form id="contact-form" method="post" enctype="multipart/form-data">
+                        <form id="contact-form" method="post" enctype="multipart/form-data" action="php/contact.php">
                             <div class="row">
                                 <div class="form-group col-md-6">
                                     <input type="text" name="name" class="form-control" id="first-name" placeholder="Name" required="required">
